engine/scripting/native_api/dse_api.gen.h

/* ---- TransformComponent ---- */
DSE_CAPI_GEN void dse_transform_get_position(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_transform_set_position(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN void dse_transform_get_rotation(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_transform_set_rotation(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN void dse_transform_get_scale(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_transform_set_scale(uint32_t e, float x, float y, float z);
/* ---- Camera3DComponent ---- */
DSE_CAPI_GEN float dse_camera3d_get_fov(uint32_t e);
DSE_CAPI_GEN void  dse_camera3d_set_fov(uint32_t e, float v);
DSE_CAPI_GEN float dse_camera3d_get_near_clip(uint32_t e);
DSE_CAPI_GEN void  dse_camera3d_set_near_clip(uint32_t e, float v);
DSE_CAPI_GEN float dse_camera3d_get_far_clip(uint32_t e);
DSE_CAPI_GEN void  dse_camera3d_set_far_clip(uint32_t e, float v);
DSE_CAPI_GEN int  dse_camera3d_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_camera3d_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN int  dse_camera3d_get_priority(uint32_t e);
DSE_CAPI_GEN void dse_camera3d_set_priority(uint32_t e, int v);
/* ---- MeshRendererComponent ---- */
DSE_CAPI_GEN void dse_mesh_renderer_get_color(uint32_t e, float* x, float* y, float* z, float* w);
DSE_CAPI_GEN void dse_mesh_renderer_set_color(uint32_t e, float x, float y, float z, float w);
DSE_CAPI_GEN int  dse_mesh_renderer_get_visible(uint32_t e);
DSE_CAPI_GEN void dse_mesh_renderer_set_visible(uint32_t e, int v);
DSE_CAPI_GEN float dse_mesh_renderer_get_metallic(uint32_t e);
DSE_CAPI_GEN void  dse_mesh_renderer_set_metallic(uint32_t e, float v);
DSE_CAPI_GEN float dse_mesh_renderer_get_roughness(uint32_t e);
DSE_CAPI_GEN void  dse_mesh_renderer_set_roughness(uint32_t e, float v);
DSE_CAPI_GEN void dse_mesh_renderer_get_emissive(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_mesh_renderer_set_emissive(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN int  dse_mesh_renderer_get_receive_shadow(uint32_t e);
DSE_CAPI_GEN void dse_mesh_renderer_set_receive_shadow(uint32_t e, int v);
DSE_CAPI_GEN int  dse_mesh_renderer_get_mesh_path(uint32_t e, char* buf, int buf_size);
DSE_CAPI_GEN void dse_mesh_renderer_set_shader_variant(uint32_t e, const char* v);
DSE_CAPI_GEN int  dse_mesh_renderer_get_shader_variant(uint32_t e, char* buf, int buf_size);
/* ---- DirectionalLight3DComponent ---- */
DSE_CAPI_GEN void dse_dir_light_get_direction(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_dir_light_set_direction(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN void dse_dir_light_get_color(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_dir_light_set_color(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN float dse_dir_light_get_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_dir_light_set_intensity(uint32_t e, float v);
DSE_CAPI_GEN float dse_dir_light_get_ambient_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_dir_light_set_ambient_intensity(uint32_t e, float v);
DSE_CAPI_GEN int  dse_dir_light_get_cast_shadow(uint32_t e);
DSE_CAPI_GEN void dse_dir_light_set_cast_shadow(uint32_t e, int v);
DSE_CAPI_GEN float dse_dir_light_get_shadow_strength(uint32_t e);
DSE_CAPI_GEN void  dse_dir_light_set_shadow_strength(uint32_t e, float v);
DSE_CAPI_GEN int  dse_dir_light_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_dir_light_set_enabled(uint32_t e, int v);
/* ---- PointLightComponent ---- */
DSE_CAPI_GEN void dse_point_light_get_color(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_point_light_set_color(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN float dse_point_light_get_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_point_light_set_intensity(uint32_t e, float v);
DSE_CAPI_GEN float dse_point_light_get_radius(uint32_t e);
DSE_CAPI_GEN void  dse_point_light_set_radius(uint32_t e, float v);
DSE_CAPI_GEN int  dse_point_light_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_point_light_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN int  dse_point_light_get_cast_shadow(uint32_t e);
DSE_CAPI_GEN void dse_point_light_set_cast_shadow(uint32_t e, int v);
/* ---- SpotLightComponent ---- */
DSE_CAPI_GEN void dse_spot_light_get_color(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_spot_light_set_color(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN float dse_spot_light_get_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_spot_light_set_intensity(uint32_t e, float v);
DSE_CAPI_GEN float dse_spot_light_get_radius(uint32_t e);
DSE_CAPI_GEN void  dse_spot_light_set_radius(uint32_t e, float v);
DSE_CAPI_GEN float dse_spot_light_get_inner_cone_angle(uint32_t e);
DSE_CAPI_GEN void  dse_spot_light_set_inner_cone_angle(uint32_t e, float v);
DSE_CAPI_GEN float dse_spot_light_get_outer_cone_angle(uint32_t e);
DSE_CAPI_GEN void  dse_spot_light_set_outer_cone_angle(uint32_t e, float v);
DSE_CAPI_GEN void dse_spot_light_get_direction(uint32_t e, float* x, float* y, float* z);
DSE_CAPI_GEN void dse_spot_light_set_direction(uint32_t e, float x, float y, float z);
DSE_CAPI_GEN int  dse_spot_light_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_spot_light_set_enabled(uint32_t e, int v);