GameScripts/DSEngine.Runtime/Generated/Native.gen.cs

// <auto-generated>
//   来源：tools/codegen/binding_defs.json — 勿手动修改
// </auto-generated>

using System.Runtime.InteropServices;

namespace DSEngine;

/// <summary>.NET 8 LibraryImport P/Invoke 声明 — 对应 dse_api.h C ABI</summary>
internal static partial class Native {
    const string Lib = "dse_engine";

    // ---- Entity (手写, 非 codegen 字段) ----
    [LibraryImport(Lib, EntryPoint = "dse_entity_create")]
    internal static partial uint dse_entity_create();

    [LibraryImport(Lib, EntryPoint = "dse_entity_destroy")]
    internal static partial void dse_entity_destroy(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_entity_valid")]
    internal static partial int dse_entity_valid(uint e);

    // ---- TransformComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_transform_get_position")]
    internal static partial void dse_transform_get_position(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_transform_set_position")]
    internal static partial void dse_transform_set_position(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_transform_get_rotation")]
    internal static partial void dse_transform_get_rotation(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_transform_set_rotation")]
    internal static partial void dse_transform_set_rotation(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_transform_get_scale")]
    internal static partial void dse_transform_get_scale(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_transform_set_scale")]
    internal static partial void dse_transform_set_scale(uint e, float x, float y, float z);

    // ---- Camera3DComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_camera3d_get_fov")]
    internal static partial float dse_camera3d_get_fov(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_camera3d_set_fov")]
    internal static partial void dse_camera3d_set_fov(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_camera3d_get_near_clip")]
    internal static partial float dse_camera3d_get_near_clip(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_camera3d_set_near_clip")]
    internal static partial void dse_camera3d_set_near_clip(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_camera3d_get_far_clip")]
    internal static partial float dse_camera3d_get_far_clip(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_camera3d_set_far_clip")]
    internal static partial void dse_camera3d_set_far_clip(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_camera3d_get_enabled")]
    internal static partial int dse_camera3d_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_camera3d_set_enabled")]
    internal static partial void dse_camera3d_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_camera3d_get_priority")]
    internal static partial int dse_camera3d_get_priority(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_camera3d_set_priority")]
    internal static partial void dse_camera3d_set_priority(uint e, int v);

    // ---- MeshRendererComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_get_color")]
    internal static partial void dse_mesh_renderer_get_color(uint e, out float x, out float y, out float z, out float w);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_color")]
    internal static partial void dse_mesh_renderer_set_color(uint e, float x, float y, float z, float w);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_get_visible")]
    internal static partial int dse_mesh_renderer_get_visible(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_visible")]
    internal static partial void dse_mesh_renderer_set_visible(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_get_metallic")]
    internal static partial float dse_mesh_renderer_get_metallic(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_metallic")]
    internal static partial void dse_mesh_renderer_set_metallic(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_get_roughness")]
    internal static partial float dse_mesh_renderer_get_roughness(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_roughness")]
    internal static partial void dse_mesh_renderer_set_roughness(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_get_emissive")]
    internal static partial void dse_mesh_renderer_get_emissive(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_emissive")]
    internal static partial void dse_mesh_renderer_set_emissive(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_get_receive_shadow")]
    internal static partial int dse_mesh_renderer_get_receive_shadow(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_receive_shadow")]
    internal static partial void dse_mesh_renderer_set_receive_shadow(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_mesh_path", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_mesh_renderer_set_mesh_path(uint e, string v);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_get_mesh_path")]
    internal static partial int dse_mesh_renderer_get_mesh_path(uint e, [Out] byte[] buf, int bufSize);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_shader_variant", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_mesh_renderer_set_shader_variant(uint e, string v);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_get_shader_variant")]
    internal static partial int dse_mesh_renderer_get_shader_variant(uint e, [Out] byte[] buf, int bufSize);

    // ---- DirectionalLight3DComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_dir_light_get_direction")]
    internal static partial void dse_dir_light_get_direction(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_set_direction")]
    internal static partial void dse_dir_light_set_direction(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_get_color")]
    internal static partial void dse_dir_light_get_color(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_set_color")]
    internal static partial void dse_dir_light_set_color(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_get_intensity")]
    internal static partial float dse_dir_light_get_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_set_intensity")]
    internal static partial void dse_dir_light_set_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_get_ambient_intensity")]
    internal static partial float dse_dir_light_get_ambient_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_set_ambient_intensity")]
    internal static partial void dse_dir_light_set_ambient_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_get_cast_shadow")]
    internal static partial int dse_dir_light_get_cast_shadow(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_set_cast_shadow")]
    internal static partial void dse_dir_light_set_cast_shadow(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_get_shadow_strength")]
    internal static partial float dse_dir_light_get_shadow_strength(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_set_shadow_strength")]
    internal static partial void dse_dir_light_set_shadow_strength(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_get_enabled")]
    internal static partial int dse_dir_light_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_set_enabled")]
    internal static partial void dse_dir_light_set_enabled(uint e, int v);

    // ---- PointLightComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_point_light_get_color")]
    internal static partial void dse_point_light_get_color(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_point_light_set_color")]
    internal static partial void dse_point_light_set_color(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_point_light_get_intensity")]
    internal static partial float dse_point_light_get_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_point_light_set_intensity")]
    internal static partial void dse_point_light_set_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_point_light_get_radius")]
    internal static partial float dse_point_light_get_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_point_light_set_radius")]
    internal static partial void dse_point_light_set_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_point_light_get_enabled")]
    internal static partial int dse_point_light_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_point_light_set_enabled")]
    internal static partial void dse_point_light_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_point_light_get_cast_shadow")]
    internal static partial int dse_point_light_get_cast_shadow(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_point_light_set_cast_shadow")]
    internal static partial void dse_point_light_set_cast_shadow(uint e, int v);

    // ---- SpotLightComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_spot_light_get_color")]
    internal static partial void dse_spot_light_get_color(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_set_color")]
    internal static partial void dse_spot_light_set_color(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_get_intensity")]
    internal static partial float dse_spot_light_get_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_set_intensity")]
    internal static partial void dse_spot_light_set_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_get_radius")]
    internal static partial float dse_spot_light_get_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_set_radius")]
    internal static partial void dse_spot_light_set_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_get_inner_cone_angle")]
    internal static partial float dse_spot_light_get_inner_cone_angle(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_set_inner_cone_angle")]
    internal static partial void dse_spot_light_set_inner_cone_angle(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_get_outer_cone_angle")]
    internal static partial float dse_spot_light_get_outer_cone_angle(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_set_outer_cone_angle")]
    internal static partial void dse_spot_light_set_outer_cone_angle(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_get_direction")]
    internal static partial void dse_spot_light_get_direction(uint e, out float x, out float y, out float z);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_set_direction")]
    internal static partial void dse_spot_light_set_direction(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_get_enabled")]
    internal static partial int dse_spot_light_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_set_enabled")]
    internal static partial void dse_spot_light_set_enabled(uint e, int v);
